package ua.nure.medirepairtrack.Entity.Invoice;

public enum InvoiceItemType {
    LABOR,
    PARTS,
    DELIVERY,
    OTHER
}
