package ua.nure.medirepairtrack.Repository;

import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.Modifying;
import org.springframework.data.jpa.repository.Query;
import ua.nure.medirepairtrack.Entity.Invoice.InvoiceDetail;
import ua.nure.medirepairtrack.Entity.Invoice.InvoiceItemType;

import java.math.BigDecimal;
import java.util.List;
import java.util.Optional;

public interface InvoiceDetailRepository extends JpaRepository<InvoiceDetail, Integer> {

    List<InvoiceDetail> findByInvoiceId(Integer invoiceId);

    @Query("""
    delete from InvoiceDetail d
    where d.invoice.id = :invoiceId
        and d.itemType <> 'OTHER'
    """)
    @Modifying
    void deleteAutoGeneratedItems(Integer invoiceId);

    // Для partial-recalculate по секції
    void deleteByInvoiceIdAndItemType(Integer invoiceId, InvoiceItemType type);

    // Поточна фактична сума (після коефіцієнтів / знижок)
    @Query("""
       select coalesce(sum(d.totalPrice), 0)
       from InvoiceDetail d
       where d.invoice.id = :invoiceId
    """)
    BigDecimal sumTotalPrice(Integer invoiceId);

    // Сума ДО знижок (quantity * pricePerUnit)
    @Query("""
       select coalesce(sum(d.quantity * d.pricePerUnit), 0)
       from InvoiceDetail d
       where d.invoice.id = :invoiceId
    """)
    BigDecimal sumTotalBeforeDiscount(Integer invoiceId);


    @Query("""
   select coalesce(sum(d.totalPrice), 0)
   from InvoiceDetail d
   where d.invoice.id = :invoiceId
     and d.itemType = 'OTHER'
""")
    BigDecimal sumOtherTotal(Integer invoiceId);


    Optional<InvoiceDetail> findByIdAndItemType(Integer id, InvoiceItemType itemType);
}
