package ua.nure.medirepairtrack.Service;

import lombok.RequiredArgsConstructor;
import org.springframework.context.ApplicationEventPublisher;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;
import ua.nure.medirepairtrack.DTO.InvoiceDTO.*;
import ua.nure.medirepairtrack.DTO.BillingDTO.*;
import ua.nure.medirepairtrack.Entity.Claim.Claim;
import ua.nure.medirepairtrack.Entity.Invoice.*;
import ua.nure.medirepairtrack.Event.Invoice.InvoicePaidEvent;
import ua.nure.medirepairtrack.Exception.*;
import ua.nure.medirepairtrack.Repository.InvoiceDetailRepository;
import ua.nure.medirepairtrack.Repository.InvoiceRepository;
import ua.nure.medirepairtrack.Workflow.*;

import java.math.BigDecimal;
import java.time.LocalDateTime;
import java.util.List;
import java.util.UUID;

@Service
@RequiredArgsConstructor
public class InvoiceService {

    private final InvoiceRepository invoiceRepository;
    private final InvoiceDetailRepository invoiceDetailRepository;

    private final ClaimService claimService;
    private final BillingService billingService;

    private final InvoiceStatusMachine invoiceStatusMachine;
    private final ClaimStatusMachine claimStatusMachine;

    private final ApplicationEventPublisher eventPublisher;

    // =========================
    // CREATE DRAFT
    // =========================
    @Transactional
    public InvoiceResponseDTO createDraft(Integer claimId) {
        Claim claim = claimService.getClaim(claimId);

        if (invoiceRepository.findByClaimId(claimId).isPresent()) {
            throw new OperationNotAllowedException("Рахунок для цієї заявки вже існує");
        }

        if (!claimStatusMachine.allowsInvoiceCreation(claim.getStatus())) {
            throw new OperationNotAllowedException(
                    StatusMessageUtil.denied("створити рахунок", claim.getStatus(), claimStatusMachine.allowedInvoiceCreationStatuses())
            );
        }

        Invoice invoice = Invoice.builder()
                .claim(claim)
                .invoiceNumber(generateInvoiceNumber())
                .status(InvoiceStatus.DRAFT)
                .totalAmount(BigDecimal.ZERO)
                .totalPaid(BigDecimal.ZERO)
                .createdAt(LocalDateTime.now())
                .build();

        invoiceRepository.save(invoice);
        return map(invoice);
    }

    // =========================
    // RECALCULATE
    // =========================
    @Transactional
    public InvoiceResponseDTO recalculate(Integer invoiceId) {

        Invoice invoice = getInvoice(invoiceId);

        if (!invoiceStatusMachine.allowsRecalculate(invoice.getStatus())) {
            throw new OperationNotAllowedException(
                    StatusMessageUtil.denied(
                            "перерахувати рахунок", invoice.getStatus(), invoiceStatusMachine.allowedRecalculateStatuses())
            );
        }

        // 1. Рахуємо
        BillingResultDTO billing = billingService.calculateFull(invoice.getClaim().getId());

        // 2. Чистимо старі позиції
        invoiceDetailRepository.deleteAutoGeneratedItems(invoiceId);

        // 3. Записуємо LABOR
        saveItems(invoice, billing.getLaborItems(), InvoiceItemType.LABOR);

        // 4. Записуємо PARTS
        saveItems(invoice, billing.getPartsItems(), InvoiceItemType.PARTS);

        // 5. Записуємо TRANSPORT
        saveItems(invoice, billing.getDeliveryItems(), InvoiceItemType.DELIVERY);

        // 6. Фінансовий snapshot
        refreshInvoiceTotals(invoice, billing);

        return map(invoiceRepository.save(invoice));
    }

    // =========================
    // UPDATE DUE DATE (PATCH)
    // =========================
    @Transactional
    public InvoiceResponseDTO updateDueDate(Integer id, LocalDateTime dueAt) {

        Invoice invoice = getInvoice(id);

        // 1. Статус
        if (!invoiceStatusMachine.allowsDueDateUpdate(invoice.getStatus())) {
            throw new OperationNotAllowedException("Неможливо змінити термін оплати");
        }

        // 2. null вже перевірений @Valid, але нехай буде
        if (dueAt == null) {
            throw new OperationNotAllowedException("Термін оплати не заданий");
        }

        LocalDateTime now = LocalDateTime.now();

        // 3. Заборона минулих дат
        if (dueAt.isBefore(now)) {
            throw new OperationNotAllowedException("Термін оплати не може бути в минулому");
        }

        // 4. Якщо вже був dueAt — тільки продовження
        if (invoice.getDueAt() != null) {

            if (!dueAt.isAfter(invoice.getDueAt())) {
                throw new OperationNotAllowedException("Новий термін оплати має бути пізніше поточного");
            }

            // 5. (Опціонально) обмеження на продовження
            if (dueAt.isAfter(invoice.getDueAt().plusDays(30))) {
                throw new OperationNotAllowedException("Термін оплати можна продовжити не більше ніж на 30 днів");
            }
        }

        // 6. OK — оновлюємо
        invoice.setDueAt(dueAt);
        invoice.setUpdatedAt(now);

        return map(invoiceRepository.save(invoice));
    }

    // =========================
    // ISSUE
    // =========================
    @Transactional
    public InvoiceResponseDTO issue(Integer invoiceId) {

        Invoice invoice = getInvoice(invoiceId);

        if (invoice.getStatus() != InvoiceStatus.DRAFT) {
            throw new OperationNotAllowedException("Рахунок вже зафіксований");
        }

        recalculate(invoiceId);

        invoice.setIssuedAt(LocalDateTime.now());
        invoice.setUpdatedAt(LocalDateTime.now());

        if (invoice.getTotalAmount().compareTo(BigDecimal.ZERO) == 0) {
            // автоматично оплачений рахунок (гарантія)
            invoice.setStatus(InvoiceStatus.PAID);
            invoice.setTotalPaid(BigDecimal.ZERO);
            invoice.setClosedAt(LocalDateTime.now());
        } else {
            invoice.setStatus(InvoiceStatus.ISSUED);
            invoice.setDueAt(LocalDateTime.now().plusDays(14));
        }

        return map(invoiceRepository.save(invoice));
    }

    // =========================
    // CANCEL
    // =========================
    @Transactional
    public void cancel(Integer invoiceId) {

        Invoice invoice = getInvoice(invoiceId);

        if (!invoiceStatusMachine.canTransition(invoice.getStatus(), InvoiceStatus.CANCELED)) {
            throw new OperationNotAllowedException(
                    StatusMessageUtil.denied("скасувати рахунок", invoice.getStatus(), invoiceStatusMachine.getAllowedNextStatuses(invoice.getStatus()))
            );
        }

        invoice.setStatus(InvoiceStatus.CANCELED);
        invoice.setClosedAt(LocalDateTime.now());
        invoice.setUpdatedAt(LocalDateTime.now());

        invoiceRepository.save(invoice);
    }

    // =========================
    // OtherItem methods
    // =========================
    private void refreshTotalsAfterOtherChange(Invoice invoice) {

        BigDecimal otherTotal =
                invoiceDetailRepository.sumOtherTotal(invoice.getId());

        BigDecimal autoAfter =
                invoice.getTotalAmount().subtract(otherTotal);

        invoice.setTotalAmount(autoAfter.add(otherTotal));
        invoice.setUpdatedAt(LocalDateTime.now());

        invoiceRepository.save(invoice);
    }


    @Transactional
    public InvoiceDetailResponseDTO addOtherItem(Integer invoiceId, CreateInvoiceOtherItemDTO dto) {

        Invoice invoice = getInvoice(invoiceId);

        if (!invoiceStatusMachine.allowsCostMutation(invoice.getStatus())) {
            throw new OperationNotAllowedException(
                    StatusMessageUtil.denied("додати позицію рахунку", invoice.getStatus(), invoiceStatusMachine.allowedCostMutationStatuses())
            );
        }

        InvoiceDetail detail = invoiceDetailRepository.save(
                InvoiceDetail.builder()
                        .invoice(invoice)
                        .itemType(InvoiceItemType.OTHER)
                        .description(dto.getDescription())
                        .quantity(dto.getQuantity())
                        .unitName(dto.getUnitName())
                        .pricePerUnit(dto.getPricePerUnit())
                        .totalPrice(dto.getQuantity().multiply(dto.getPricePerUnit()))
                        .build()
        );

        refreshTotalsAfterOtherChange(invoice);

        return mapDetail(detail);
    }

    @Transactional
    public InvoiceDetailResponseDTO updateOtherItem(Integer invoiceId, Integer detailId, UpdateInvoiceOtherItemDTO dto) {

        Invoice invoice = getInvoice(invoiceId);

        if (!invoiceStatusMachine.allowsCostMutation(invoice.getStatus())) {
            throw new OperationNotAllowedException(
                    StatusMessageUtil.denied("редагувати позицію рахунку", invoice.getStatus(), invoiceStatusMachine.allowedCostMutationStatuses())
            );
        }

        InvoiceDetail detail = invoiceDetailRepository
                .findByIdAndItemType(detailId, InvoiceItemType.OTHER)
                .orElseThrow(() ->
                        new NotFoundException("Ручна позиція рахунку не знайдена")
                );

        if (!detail.getInvoice().getId().equals(invoiceId)) {
            throw new OperationNotAllowedException("Позиція не належить цьому рахунку");
        }

        detail.setDescription(dto.getDescription());
        detail.setQuantity(dto.getQuantity());
        detail.setUnitName(dto.getUnitName());
        detail.setPricePerUnit(dto.getPricePerUnit());
        detail.setTotalPrice(dto.getQuantity().multiply(dto.getPricePerUnit()));

        invoiceDetailRepository.save(detail);

        refreshTotalsAfterOtherChange(invoice);

        return mapDetail(detail);
    }

    @Transactional
    public void deleteOtherItem(Integer invoiceId, Integer detailId) {

        Invoice invoice = getInvoice(invoiceId);

        if (!invoiceStatusMachine.allowsCostMutation(invoice.getStatus())) {
            throw new OperationNotAllowedException(
                    StatusMessageUtil.denied("видалити позицію рахунку", invoice.getStatus(), invoiceStatusMachine.allowedCostMutationStatuses())
            );
        }

        InvoiceDetail detail = invoiceDetailRepository
                .findByIdAndItemType(detailId, InvoiceItemType.OTHER)
                .orElseThrow(() ->
                        new NotFoundException("Ручна позиція рахунку не знайдена")
                );

        if (!detail.getInvoice().getId().equals(invoiceId)) {
            throw new OperationNotAllowedException("Позиція не належить цьому рахунку");
        }

        invoiceDetailRepository.delete(detail);

        refreshTotalsAfterOtherChange(invoice);
    }

    // =========================
    // Used in Payment service
    // =========================
    @Transactional
    public void applyPayment(Integer invoiceId, BigDecimal amount) {

        Invoice invoice = getInvoice(invoiceId);

        // 1. Статус рахунку
        if (!invoiceStatusMachine.allowsPayment(invoice.getStatus())) {
            throw new OperationNotAllowedException(
                    StatusMessageUtil.denied("прийняти оплату", invoice.getStatus(), invoiceStatusMachine.allowedPaymentStatuses())
            );
        }

        // 2. Захист від некоректної суми
        if (amount == null || amount.compareTo(BigDecimal.ZERO) <= 0) {
            throw new OperationNotAllowedException(
                    "Сума оплати має бути більшою за 0"
            );
        }

        // 3. Заборона переплати
        BigDecimal remaining = invoice.getTotalAmount().subtract(invoice.getTotalPaid());

        if (amount.compareTo(remaining) > 0) {
            throw new OperationNotAllowedException("Сума оплати перевищує залишок до сплати");
        }

        // 4. Застосування оплати
        invoice.setTotalPaid(invoice.getTotalPaid().add(amount));

        // 5. Оновлення статусу
        if (invoice.getTotalPaid().compareTo(invoice.getTotalAmount()) >= 0) {
            invoice.setStatus(InvoiceStatus.PAID);
            invoice.setClosedAt(LocalDateTime.now());

            eventPublisher.publishEvent(
                    new InvoicePaidEvent(invoice.getId(), invoice.getClaim().getId())
            );
        } else {
            invoice.setStatus(InvoiceStatus.PARTIALLY_PAID);
        }

        invoice.setUpdatedAt(LocalDateTime.now());
        invoiceRepository.save(invoice);
    }

    // =========================
    // READ
    // =========================

    public Invoice getInvoice(Integer id) {
        return invoiceRepository.findById(id)
                .orElseThrow(() -> new NotFoundException("Рахунок не знайдений"));
    }

    public List<InvoiceResponseDTO> getAllInvoices() {
        return invoiceRepository.findAllByOrderByCreatedAtDesc()
                .stream()
                .map(this::map)
                .toList();
    }

    public InvoiceResponseDTO getByInvoiceId(Integer id) {
        return map(getInvoice(id));
    }

    public InvoiceFullResponseDTO getFullByInvoiceId(Integer invoiceId) {

        Invoice invoice = getInvoice(invoiceId);

        List<InvoiceDetail> details =
                invoiceDetailRepository.findByInvoiceId(invoiceId);

        return mapToFullResponse(invoice, details);
    }

    public InvoiceResponseDTO getByClaimId(Integer claimId) {

        Invoice invoice = invoiceRepository.findByClaimId(claimId)
                .orElseThrow(() ->
                        new NotFoundException("Рахунок для заявки не знайдений")
                );

        return map(invoice);
    }

    public InvoiceFullResponseDTO getFullByClaimId(Integer claimId) {

        Invoice invoice = invoiceRepository.findByClaimId(claimId)
                .orElseThrow(() ->
                        new NotFoundException("Рахунок для заявки не знайдений")
                );

        List<InvoiceDetail> details =
                invoiceDetailRepository.findByInvoiceId(invoice.getId());

        return mapToFullResponse(invoice, details);
    }


    public List<InvoiceStatus> getAllowedStatuses(Integer id) {
        return List.copyOf(invoiceStatusMachine.getAllowedNextStatuses(getInvoice(id).getStatus()));
    }

    public List<InvoiceResponseDTO> getOverdueInvoices() {
        return invoiceRepository.findByStatusOrderByDueAtAsc(InvoiceStatus.OVERDUE)
                .stream()
                .map(this::map)
                .toList();
    }

    // =========================
    // Recalculates
    // =========================

    private void refreshInvoiceTotals(Invoice invoice, BillingResultDTO billing) {
        // 1. AUTO-позиції (зі знижками)
        BigDecimal autoBefore = billing.getTotalBeforeDiscount();
        BigDecimal autoAfter  = billing.getGrandTotal();

        // 2. OTHER (БЕЗ знижок)
        BigDecimal otherTotal =
                invoiceDetailRepository.sumOtherTotal(invoice.getId());

        // 3. Snapshot рахунку
        invoice.setTotalBeforeDiscount(autoBefore.add(otherTotal));
        invoice.setTotalAmount(autoAfter.add(otherTotal));
        invoice.setDiscountAmount(autoBefore.subtract(autoAfter));
        invoice.setUpdatedAt(LocalDateTime.now());

        invoiceRepository.save(invoice);
    }


    @Transactional
    public void recalculateLabor(Integer claimId) {

        Invoice invoice = getEditableInvoiceByClaim(claimId);
        if (invoice == null) return;

        invoiceDetailRepository.deleteByInvoiceIdAndItemType(
                invoice.getId(), InvoiceItemType.LABOR
        );

        BillingResultDTO billing =
                billingService.calculateFull(claimId);

        saveItems(invoice, billing.getLaborItems(), InvoiceItemType.LABOR);

        refreshInvoiceTotals(invoice, billing);
    }


    @Transactional
    public void recalculateParts(Integer claimId) {

        Invoice invoice = getEditableInvoiceByClaim(claimId);
        if (invoice == null) return;

        invoiceDetailRepository.deleteByInvoiceIdAndItemType(
                invoice.getId(), InvoiceItemType.PARTS
        );

        BillingResultDTO billing =
                billingService.calculateFull(claimId);

        saveItems(invoice, billing.getPartsItems(), InvoiceItemType.PARTS);

        refreshInvoiceTotals(invoice, billing);
    }


    @Transactional
    public void recalculateDelivery(Integer claimId) {

        Invoice invoice = getEditableInvoiceByClaim(claimId);
        if (invoice == null) return;

        invoiceDetailRepository.deleteByInvoiceIdAndItemType(
                invoice.getId(), InvoiceItemType.DELIVERY
        );

        BillingResultDTO billing =
                billingService.calculateFull(claimId);

        saveItems(invoice, billing.getDeliveryItems(), InvoiceItemType.DELIVERY);

        refreshInvoiceTotals(invoice, billing);
    }


    // =========================
    // UTIL
    // =========================

    public void assertInvoiceEditable(Integer claimId) {

        invoiceRepository.findByClaimId(claimId)
                .ifPresent(invoice -> {
                    if (!invoiceStatusMachine.allowsCostMutation(invoice.getStatus())) {
                        throw new OperationNotAllowedException(
                                StatusMessageUtil.denied("змінювати фінансові дані", invoice.getStatus(), invoiceStatusMachine.allowedCostMutationStatuses()));
                    }
                });
    }



    private Invoice getEditableInvoiceByClaim(Integer claimId) {

        Invoice invoice = invoiceRepository.findByClaimId(claimId)
                .orElse(null);

        if (invoice == null) return null;

        if (!invoiceStatusMachine.allowsRecalculate(invoice.getStatus())) {
            return null;
        }

        return invoice;
    }

    private void saveItems(Invoice invoice, List<BillingItemDTO> items, InvoiceItemType type) {
        for (BillingItemDTO item : items) {
            invoiceDetailRepository.save(
                    InvoiceDetail.builder()
                            .invoice(invoice)
                            .itemType(type)
                            .description(item.getDescription())
                            .quantity(item.getQuantity())
                            .unitName(item.getUnitName())
                            .pricePerUnit(item.getPricePerUnit())
                            .totalPrice(item.getTotalPrice())
                            .build()
            );
        }
    }

    private String generateInvoiceNumber() {
        return "INV-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase();
    }

    private InvoiceResponseDTO map(Invoice invoice) {
        return InvoiceResponseDTO.builder()
                .id(invoice.getId())
                .claimId(invoice.getClaim().getId())
                .invoiceNumber(invoice.getInvoiceNumber())
                .totalBeforeDiscount(invoice.getTotalBeforeDiscount())
                .discountAmount(invoice.getDiscountAmount())
                .totalAmount(invoice.getTotalAmount())
                .totalPaid(invoice.getTotalPaid())
                .status(invoice.getStatus())
                .createdAt(invoice.getCreatedAt())
                .issuedAt(invoice.getIssuedAt())
                .closedAt(invoice.getClosedAt())
                .build();
    }

    private InvoiceFullResponseDTO mapToFullResponse(Invoice invoice, List<InvoiceDetail> details) {
        List<InvoiceDetailResponseDTO> items =
                details.stream()
                        .map(this::mapDetail)
                        .toList();

        return InvoiceFullResponseDTO.builder()
                .id(invoice.getId())
                .claimId(invoice.getClaim().getId())
                .invoiceNumber(invoice.getInvoiceNumber())

                .totalBeforeDiscount(invoice.getTotalBeforeDiscount())
                .discountAmount(invoice.getDiscountAmount())
                .totalAmount(invoice.getTotalAmount())
                .totalPaid(invoice.getTotalPaid())

                .status(invoice.getStatus())

                .createdAt(invoice.getCreatedAt())
                .issuedAt(invoice.getIssuedAt())
                .dueAt(invoice.getDueAt())
                .closedAt(invoice.getClosedAt())

                .items(items)
                .build();
    }

    private InvoiceDetailResponseDTO mapDetail(InvoiceDetail detail) {
        return InvoiceDetailResponseDTO.builder()
                .id(detail.getId())
                .itemType(detail.getItemType())
                .description(detail.getDescription())
                .quantity(detail.getQuantity())
                .unitName(detail.getUnitName())
                .pricePerUnit(detail.getPricePerUnit())
                .totalPrice(detail.getTotalPrice())
                .build();
    }
}
