@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

' =========================
' CONTROLLER (API LAYER)
' =========================
class InvoiceController {
  + createDraft(claimId)
  + recalculate(invoiceId)
  + issue(invoiceId)
  + cancel(invoiceId)
  + updateDueDate(invoiceId)
  + addOtherItem(invoiceId)
  + updateOtherItem(invoiceId, itemId)
  + deleteOtherItem(invoiceId, itemId)
  + getInvoice(invoiceId)
  + getInvoiceFull(invoiceId)
  + getByClaim(claimId)
  + getOverdueInvoices()
}

' =========================
' SERVICE
' =========================
class InvoiceService {
  - invoiceRepository : InvoiceRepository
  - invoiceDetailRepository : InvoiceDetailRepository
  - billingService : BillingService
  - invoiceStatusMachine : InvoiceStatusMachine

  + createDraft(claimId)
  + recalculate(invoiceId)
  + issue(invoiceId)
  + cancel(invoiceId)
  + applyPayment(invoiceId, amount)
}

' =========================
' ENTITIES
' =========================
class Invoice {
  id : Integer
  invoiceNumber : String
  totalBeforeDiscount : Decimal
  discountAmount : Decimal
  totalAmount : Decimal
  totalPaid : Decimal
  status : InvoiceStatus
  createdAt : LocalDateTime
  issuedAt : LocalDateTime
  dueAt : LocalDateTime
  closedAt : LocalDateTime
}

class InvoiceDetail {
  id : Integer
  invoice : Invoice
  itemType : InvoiceItemType
  description : String
  quantity : Decimal
  unitName : String
  pricePerUnit : Decimal
  totalPrice : Decimal
}

enum InvoiceStatus {
  DRAFT
  ISSUED
  PARTIALLY_PAID
  PAID
  OVERDUE
  CANCELED
}

enum InvoiceItemType {
  LABOR
  PARTS
  DELIVERY
  OTHER
}

' =========================
' REPOSITORIES
' =========================
interface InvoiceRepository {
  + findById(id)
  + findByClaimId(claimId)
  + findOverdueCandidates(now)
}

interface InvoiceDetailRepository {
  + findByInvoiceId(invoiceId)
  + deleteAutoGeneratedItems(invoiceId)
  + sumTotalPrice(invoiceId)
  + sumTotalBeforeDiscount(invoiceId)
}

' =========================
' SUPPORTING COMPONENTS
' =========================
class BillingService {
  + calculateFull(claimId)
  + calculateLabor(claimId)
  + calculateParts(claimId)
  + calculateDelivery(claimId)
}

class InvoiceStatusMachine {
  + canTransition(from, to)
  + allowsCostMutation(status)
  + allowsRecalculate(status)
  + allowsPayment(status)
}

' =========================
' RELATIONSHIPS
' =========================
InvoiceController -- InvoiceService

Invoice *-- InvoiceDetail
Invoice --> InvoiceStatus
InvoiceDetail -> InvoiceItemType

InvoiceService -- InvoiceRepository
InvoiceService -- InvoiceDetailRepository

InvoiceRepository .> Invoice
InvoiceDetailRepository ..> InvoiceDetail

InvoiceService -> BillingService
InvoiceService --> InvoiceStatusMachine

@enduml